--- a/app/src/main/res/layout/hotel_items.xml
+++ b/app/src/main/res/layout/hotel_items.xml
@@ -18,19 +18,65 @@
             android:src="@drawable/hotel" />
         <View
             android:id="@+id/grad"
-            android:layout_height="110dp"
+            android:layout_height="200dp"
             android:layout_width="match_parent"
             android:background="@drawable/gradient_splash"
             android:alpha="0.4" />
 
-        <TextView
-            android:id="@+id/category_header"
+        <LinearLayout
+            android:layout_height="200dp"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:text="Hotels"
-            android:gravity="center_vertical"
-            android:textColor="@color/textBlack"
-            android:textSize="25sp"
-            android:textAlignment="center" />
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/category_header"
+                android:layout_width="match_parent"
+                android:layout_height="110dp"
+                android:text="Hotels"
+                android:gravity="center_vertical"
+                android:textColor="@color/textBlack"
+                android:textSize="25sp"
+                android:textAlignment="center" />
+            <LinearLayout
+                android:id="@+id/location_layout"
+                android:layout_height="45dp"
+                android:layout_width="match_parent"
+                android:paddingLeft="5dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/location_icon"
+                    android:layout_height="20dp"
+                    android:layout_width="20dp"
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_map_" />
+                <TextView
+                    android:id="@+id/location_data"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="@string/hotel_one_location"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/phone_layout"
+                android:layout_height="45dp"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:paddingLeft="5dp">
+                <ImageView
+                    android:id="@+id/phone_icon"
+                    android:layout_height="20dp"
+                    android:layout_width="20dp"
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_phone_solid" />
+                <TextView
+                    android:id="@+id/phone_data"
+                    android:layout_gravity="center"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="@string/hotel_one_phone"/>
+            </LinearLayout>
+        </LinearLayout>
     </FrameLayout>
 </LinearLayout>
